Fixed continue exploring spacing and show more button border

--- a/styles.css
+++ b/styles.css
@@ -323,14 +323,18 @@ h3 {
     font-weight: 600;
     color: #222;
     text-align: center;
+    margin-top: 40px;
+    margin-bottom: 30px;
 }
 
 .show-more {
     margin: auto;
+    margin-bottom: 16px;
     height: 110px;
     width:  300px;
     background-color: #222;
     color: #fff;
+    border: 0;
     border-radius: 20px;
     font-size: 36px;
 }
